--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # custom
 .DS_Store
+test.py
 
 
 # Byte-compiled / optimized / DLL files
@@ -126,9 +127,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
-env/
 venv/
-ENV/
 env.bak/
 venv.bak/
 
